css/style.css
/*-- [Master Stylesheet]
Author:       Infinity Systems Sangli MH
Author URL:   http:/infinitysystems.info
License:      Creative Commons Attribution 3.0 Unported
License URL:  http://infinitysystems.info/licenses/by/3.0/
Version:      7.0
Last Change:  12/12/2024
/* ---------------------------------------

[Table of contents]

1. Fonts
2. Resources / Css Files
3. Reset
4. Global Settings
5. Buttons Style
6. Social Icons
7. Scroll To Top style
8. Page Title
9. Section Title
10. Main Header / Two / Three
11. Mobile Menu
12. Banner Section
13. Banner Conference
14. Banner MeetUp
15. About Section / Two
16. Coming Soon
17. Features Section / Two / Three
18. Fluid Section One
19. Speakers Section / Two / Three
20. Speker Detail
21. schedule Section / Two / Three
22. Event Detail
23. Pricing Section / Two / Three
24. Fun Fact Section
25. FAQ's Section
26. FAQ Form Section
27. Fun Fact Section Two
28. Why Choose Us
29. App Section
30. Gallery Section
31. Event Info Section
32. Testimonial Section
33. News Section
34. Blog Sidebar
35. Blog Detail
36. Styled Pagination
37. Coming Soon
38. Video Section
39. Call to Action
40. Register Section
41. Contact Page Section
42. Map Section
43. Subscribe Section
44. Newsletter Section
45. Clients Section / Two / Three
46. Main Footer / Two / Three
47. Error Section
48. Sidebar Page Container
49. Comment Area
50. Comment Form
51. Social icon Colored
52. Right to Left
53. Boxed Layout
-------------------------------------------*/

/***

====================================================================
	 Fonts
====================================================================

***/

@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900|Orbitron:500,700|Ubuntu:400,500,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&amp;display=swap');
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&amp;display=swap");
@import url('https://fonts.googleapis.com/css2?family=Kalam&amp;display=swap');
@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&amp;display=swap');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&amp;display=swap');
/*
	font-family: 'Ubuntu', sans-serif;
	font-family: 'Poppins', sans-serif;
	font-family: 'Orbitron', sans-serif;
*/

/***

====================================================================
	 Resources / Css Files
====================================================================

 ***/

@import url('fontawesome-all.css');
@import url('flaticon.css');
@import url('elegent-icon.css');
@import url('animate.css');
@import url('swiper.css');
@import url('owl.css');
@import url('jquery.fancybox.min.css');

/***

====================================================================
    Reset
====================================================================

 ***/

* {
	margin:0px;
	padding:0px;
	border:none;
	outline:none;
}

/***

====================================================================
	Global Settings
====================================================================

 ***/

body {
	font-size:14px;
	color:#777777;
	line-height:1.7em;
	font-weight:400;
	background:#ffffff;
	-webkit-font-smoothing: antialiased;
	-moz-font-smoothing: antialiased;
	font-family: 'Poppins', sans-serif;
}

a{
	text-decoration:none;
	cursor:pointer;
	color:#e8006f;
}

button,
a:hover,a:focus,a:visited{
	text-decoration:none;
	outline:none !important;
}

h1,h2,h3,h4,h5,h6 {
	position:relative;
	font-weight:normal;
	margin:0px;
	background:none;
	line-height:1.6em;
	font-family: 'Ubuntu', sans-serif;
	/*font-family: "Playfair Display", serif;*/
}

input,button,select,textarea{

}


textarea{
	overflow:hidden;
}

p,.text{
	position:relative;
	font-size: 16px;
	line-height: 26px;
	color: #5c5b5b;
	font-weight: 400;
}

.auto-container{
	position:static;
	max-width:1200px;
	padding:0px 15px;
	margin:0 auto;
	display: flex;
	justify-content: space-between;
}

.bread-crumb-auto-container{
	position:static;
	padding:0px 15px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.subscribe-auto-container{
	position:static;
	padding:0px 15px;
	margin:0 auto;
	display: flex;
	justify-content: space-between;
	max-width: 1000px;
}

.footer-auto-container{
	position:static;
	padding:0px 15px;
	margin:0 auto;
	display: flex;
	justify-content: space-between;
	max-width: 500px;
}


.large-container{
	position:static;
	max-width:1550px;
	padding:0px 15px;
	margin:0 auto;
}

.medium-container{
	max-width:850px;
}

.page-wrapper{
	position:relative;
	margin:0 auto;
	width:100%;
	min-width:300px;
	overflow: hidden;
}

ul,li{
	list-style:none;
	padding:0px;
	margin:0px;
}

img{
	display:inline-block;
	max-width:100%;
}

.theme-btn{
	display:inline-block;
	-webkit-transition:all 0.3s ease;
	-moz-transition:all 0.3s ease;
	-ms-transition:all 0.3s ease;
	-o-transition:all 0.3s ease;
	transition:all 0.3s ease;
}

.centered{
	text-align:center;
}

.theme-btn .flaticon-arrow{
	display: inherit;
	font-size:inherit;
	margin-left: 3px;
	font-size: 14px;
	-webkit-transform: scaleX(-1) translateY(-1px);
	-moz-transform: scaleX(-1) translateY(-1px);
	-ms-transform: scaleX(-1) translateY(-1px);
	-o-transform: scaleX(-1) translateY(-1px);
	transform: scaleX(-1) translateY(-1px);
}

::-webkit-input-placeholder{color: inherit;}
::-moz-input-placeholder{color:  inherit;}
::-ms-input-placeholder{color:  inherit;}


::selection {
background:#ec167f;
color:#ffffff;
}

::-moz-selection {
background:#ec167f;
color:#ffffff;
}

::-webkit-selection {
background:#ec167f;
color:#ffffff;
}

/***

====================================================================
	Buttons Style
====================================================================

 ***/

 .theme-btn{
 	position: relative;
 	transition: all 300ms ease;
 }
/* ... */

